--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<!-- Google Tag Manager -->
+ <!-- Google Tag Manager 
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KSCBHJ"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -23,16 +23,16 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-KSCBHJ');</script>
-<!-- End Google Tag Manager -->
+ End Google Tag Manager --> 
 
 <div id='container'>
 
   <div id='videos'>
     <video id='localVideo' autoplay muted></video>
-    <video id='remoteVideo' autoplay></video>
+    <!-- <video id='remoteVideo' autoplay></video> -->
   </div>
 </div>
-
+<!-- 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,11 +43,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   ga('send', 'pageview');
 
 </script>
-
+ -->
 <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src='js/lib/adapter.js'></script>
-<script src='js/new.js'></script>
+<script src='js/multiple.js'></script>
 
 </body>
 </html>
