--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>1byZeroLabs</title>
+    <title>TheFileApp</title>
     <meta name="description" content="We are protyping experts with a wide range of expertise in electronics, software, product design and developement.">
     <meta name="keywords" content="Kevin Roy">
     <meta name="author" content="Roy&Mish">
